--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
     <p>Silakan login untuk mengakses konten eksklusif.</p>
   </main>
 
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on('init', user => {
-          if (!user) {
-            window.netlifyIdentity.on('login', () => {
-              // Arahkan kembali ke halaman utama setelah login
-              document.location.href = '/';
-            });
-          }
-        });
-      }
-    });
-  </script>
+  <!-- include the widget -->
+  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+</head>
+<body>
+  <!-- Add a menu:
+   Log in / Sign up - when the user is not logged in
+   Username / Log out - when the user is logged in
+  -->
+  <div data-netlify-identity-menu></div>
+
+  <!-- Add a simpler button:
+    Simple button that will open the modal.
+  -->
+  <div data-netlify-identity-button>Login with Netlify Identity</div>
 </body>
 </html>
